# GuardianEye

./: .dockerignore  .env.example  .gitignore  .passwdfile  ARCHITECTURE_REDESIGN_REPORT.md  DATABASE_IMPLEMENTATION.md  Dockerfile  FIXES_APPLIED.md  GUARDIANEYE_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  MULTI_AGENT_ORCHESTRATION_SUMMARY.md  QUICK_START_EMBEDDINGS.md  README.md  SEEDING_SUCCESS.md  SETUP_KNOWLEDGE_BASE.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_INFRASTRUCTURE_GUIDE.md  TODO.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  seed.sh  test_db_integration.py
.claude/plans/: multi-agent-orchestration-plan.md
docs/: agent_guide.md  api.md  architecture.md  deployment.md
k8s/: deployment.yaml  postgres.yaml  redis.yaml
scripts/: run_dev.sh  seed_data.py  seed_vector_store.py  setup.sh  setup_db.py
src/: __init__.py  main.py
src/agents/: __init__.py
src/agents/base/: __init__.py  base_agent.py  base_supervisor.py  tools.py
src/agents/graphs/: __init__.py  governance_graph.py  main_graph.py  security_ops_graph.py  threat_intel_graph.py
src/agents/specialists/: __init__.py  anomaly_investigation.py  compliance_auditor.py  incident_triage.py  recon_orchestrator.py  security_knowledge.py  threat_hunting.py  vulnerability_prioritization.py
src/agents/supervisors/: __init__.py  governance_supervisor.py  main_supervisor.py  security_ops_supervisor.py  threat_intel_supervisor.py
src/api/: __init__.py  deps.py  middleware.py
src/api/schemas/: __init__.py  agent_request.py  agent_response.py  auth.py  common.py
src/api/v1/: __init__.py  agents.py  auth.py  health.py  router.py  websocket.py
src/config/: __init__.py  agent_registry.py  settings.py
src/core/: __init__.py  checkpointer.py  exceptions.py  llm_factory.py  prompts.py  state.py
src/db/: __init__.py  init_db.py  models.py  postgres.py  redis.py  vector_store.py
src/services/: __init__.py  agent_service.py  auth_service.py  knowledge_service.py
src/utils/: __init__.py  logging.py  metrics.py  validators.py
tests/: __init__.py  conftest.py  utils.py
tests/e2e/: test_workflows.py
tests/integration/test_api/: test_health.py  test_websocket.py
tests/integration/test_graphs/: __init__.py  test_orchestration.py
tests/unit/test_core/: test_llm_factory.py
tests/unit/test_graphs/: __init__.py  test_main_graph.py
