[project]
name = "guardianeye"
version = "2.0.0"
description = "AI-Powered Security Operations Center Dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Database & State
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",

    # Vector DB
    "chromadb>=0.5.0",

    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Async & HTTP
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",

    # Environment
    "python-dotenv>=1.0.0",

    # Utilities
    "pyyaml>=6.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.1.0",
    "httpx>=0.27.0",

    # Code Quality
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",

    # Types
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.0",
]

monitoring = [
    "langsmith>=0.1.0",
    "prometheus-client>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term --tb=short"
env = [
    "APP_ENV=testing",
    "TEST_POSTGRES_URL=postgresql+asyncpg://test_user:test_pass@localhost:5433/guardianeye_test",
    "TEST_REDIS_URL=redis://localhost:6380/0",
    "TEST_CHROMA_DIR=./data/chroma_test",
    "POSTGRES_URL=postgresql+asyncpg://test_user:test_pass@localhost:5433/guardianeye_test",
    "REDIS_URL=redis://localhost:6380/0",
    "CHROMA_PERSIST_DIRECTORY=./data/chroma_test",
    "JWT_SECRET_KEY=test-secret-key-for-testing-only",
    "LLM_PROVIDER=ollama",
    "LLM_MODEL=llama3.1:8b",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
